# aevis-openenv

./: Dockerfile  README.md  __init__.py  app.py  baseline_scores.json  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  aevis_env.py  graders.py  models.py  patient_loader.py  reward.py
server/: aevis_environment.py  app.py
