[project]
name = "aevis-openenv"
version = "1.0.0"
description = "AI retinal disease screening environment for OpenEnv"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
]

[project.scripts]
server = "app:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
